change format usage hour
